networkpolicy/policies/baseline/allow-from-same-namespace.yml
apiVersion: extensions/v1beta1
kind: NetworkPolicy
metadata:
  name: allow-from-same-namespace
spec:
  podSelector:
  ingress:
  - from:
    - podSelector: {}
