networkpolicy/policies/baseline/default-deny.yml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: default-deny
spec:
<<<<<<< HEAD
  podSelector:
=======
  podSelector: []
>>>>>>> Updated podSelector
